# vec-utils

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: vec.rs  zip.rs
src/: boxed.rs  combin.rs  lazy.rs  lib.rs  main.rs  try.rs  tuple.rs  vec.rs
src/combin/: data.rs
src/vec/: general_zip.rs
tests/: safety_tests.rs  smoke.rs
