[package]
name = "vec-utils"
version = "0.1.4"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
edition = "2018"

readme = "README.md"
license = "MIT"
description = "vector utilities"
repository = "https://github.com/KrishnaSannasi/vec-utils"

keywords = ['vec', 'utilities']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
